--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
                             <a href=".\meeting.html">Mettings</a>
                         </li>
                         <li>
-                            <a href="#">Teams</a>
+                            <a href=".\Team.html">Teams</a>
                         </li>
                         
                         <!-- style="float: right;" -->
