sub-menu change in meetings page

--- a/public/meeting.html
+++ b/public/meeting.html
@@ -58,13 +58,13 @@
                         <ul class="links">
                             <li class="link srch-meet"> <a href=".\filter_meeting.html">Filter/ Search meetings</a> </li>
                             <li class="link add-meet " style="border:1px solid grey; 
-                            border-bottom: none; border-top-left-radius: 3px;
+                        border-bottom: 1px solid white; border-top-left-radius: 3px;
                             border-top-right-radius: 3px;
                             "> <a href=".\meeting.html">Add a meeting</a> </li>
                         </ul>
                     </nav>
                 </div>
-                <div class="oprn-container">
+                <div class="oprn-container add-meet-cntr">
                     <div class="snd-heading">
                         <h2>Add a new Meeting</h2>
                         <hr>
