--- a/public/filter_meeting.html
+++ b/public/filter_meeting.html
@@ -60,7 +60,7 @@
                     <nav class="meetings-menu">
                         <ul class="links">
                             <li class="link srch-meet" style="border:1px solid grey; 
-                            border-bottom: none; border-top-left-radius: 3px;
+                            border-bottom: 1px solid white; border-top-left-radius: 3px;
                             border-top-right-radius: 3px;
                             "> <a href=".\filter_meeting.html">Filter/ Search meetings</a> </li>
                             <li class="link add-meet "> <a href=".\meeting.html">Add a meeting</a> </li>
