--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
             </div>
 
 
-
+            <!-- same container use in diiferent page structures -->
             <div class="main-cntr ">
                 <div class="heading">
                     <h1>Calendar</h1>
