change in common-utilities added properties to body

--- a/public/login.html
+++ b/public/login.html
@@ -27,7 +27,7 @@
                     <div class="heading">
                         <h1>Login</h1>
                     </div>
-                    <form action="#">
+                    <form action=".\index.html">
 
                         <div class="form-grp">
                             <div class="eml-id-lbl">
