--- a/public/register.html
+++ b/public/register.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\external\normalize.css">
-    <link rel="stylesheet" href="\css\login.css">
+    <link rel="stylesheet" href=".\external\normalize.css">
+    <link rel="stylesheet" href=".\css\login.css">
     <script src="https://kit.fontawesome.com/ff9dc5af4a.js" crossorigin="anonymous"></script>
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
