--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href=".\external\normalize.css">
-    <link rel="stylesheet" href=".\css\login.css">
+    <link rel="stylesheet" href=".\css\login1.css">
     
     
     <script src="https://kit.fontawesome.com/ff9dc5af4a.js" crossorigin="anonymous"></script>
