added extra view beakpoints in login1css

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                                 <div class="col col-right">
                                     <ul>
 
-                                        <li id="usr-profile"> <a href="#" class="user-name">Hello <span>
+                                        <li id="usr-profile"> <a href="#" class="user-name">Hello &ThickSpace;<span>
                                                     JohnDoe@example.com! </span></a> </li>
                                         <li id="log-state"><a href="#">Logout</a></li>
                                     </ul>
