--- a/public/login.html
+++ b/public/login.html
@@ -38,7 +38,7 @@
                             <div class="frm-inp email-id">
                                 <div class="inp-icon-cntr">
                                     <span><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                                    <input type="text" placeholder="Enter email id" name="email" id="eml-id">
+                                    <input type="text" placeholder="Enter email id" name="email" id="eml-id" required>
                                 </div>
 
                             </div>
@@ -52,7 +52,7 @@
                             <div class="frm-inp pwd">
                                 <div class="inp-icon-cntr">
                                     <span><i class="fa fa-lock" aria-hidden="true"></i></span>
-                                    <input type="password" placeholder="Enter Password" name="password" id="password">
+                                    <input type="password" placeholder="Enter Password" name="password" id="password" required>
                                 </div>
 
                             </div>
