--- a/public/meeting.html
+++ b/public/meeting.html
@@ -43,7 +43,7 @@
                                 <div class="col col-right">
                                     <ul>
                                         
-                                        <li id="usr-profile"> <a href="#" class="user-name">Hello <span> JohnDoe@example.com! </span></a> </li>
+                                        <li id="usr-profile"> <a href="#" class="user-name">Hello &ThickSpace;<span> JohnDoe@example.com! </span></a> </li>
                                         <li id="log-state"><a href="#">Logout</a></li>
                                     </ul>
                                 </div>
