--- a/public/Team.html
+++ b/public/Team.html
@@ -38,7 +38,7 @@
                                             <a href=".\meeting.html">Mettings</a>
                                         </li>
                                         <li>
-                                            <a href=".\Team.html">Teams</a>
+                                            <a href=".\Team.html" style="opacity: 1; background-color: var(--dark-white);">Teams</a>
                                         </li>
             
                                     </ul>
@@ -209,7 +209,7 @@
                                         <option value="member4">member4</option>
                                         <option value="member5">member5</option>
                                     </select>
-                                    <button class="btn btn-success">Add</button>
+                                    <button class="btn btn-success btn-add">Add</button>
                                 </div>
                                 <div class="form-control submit-from">
                                     <button class="btn btn-submit" value="submit">Add Team</button>
