--- a/public/meeting.html
+++ b/public/meeting.html
@@ -32,7 +32,7 @@
                                             <a href=".\index.html">Calendar</a>
                                         </li>
                                         <li>
-                                            <a href=".\meeting.html">Mettings</a>
+                                            <a href=".\meeting.html" style="opacity: 1; background-color: var(--dark-white);">Mettings</a>
                                         </li>
                                         <li>
                                             <a href=".\Team.html">Teams</a>
@@ -71,7 +71,7 @@
                             <li class="link add-meet " style="border:1px solid grey; 
                         border-bottom: 1px solid white; border-top-left-radius: 3px;
                             border-top-right-radius: 3px;
-                            "> <a href=".\meeting.html">Add a meeting</a> </li>
+                            "> <a href=".\meeting.html" style="color:#4ea1a1;">Add a meeting</a> </li>
                         </ul>
                     </nav>
                 </div>
@@ -97,7 +97,7 @@
                             <input type="text" id="add-members"   placeholder="john@example.com, @annual-day, mark@example.com">
                             <br><span class="note">Seperate emailids / team short names by commas - team short names always beginwith @</span> 
                             <br>
-                            <button class="btn">Add meeting</button>
+                            <button class="btn btn-submit">Add meeting</button>
                         </form>
                         
                     </div>
