--- a/public/filter_meeting.html
+++ b/public/filter_meeting.html
@@ -35,7 +35,7 @@
                                             <a href=".\index.html">Calendar</a>
                                         </li>
                                         <li>
-                                            <a href=".\meeting.html" style="opacity: 1; background-color: var(--dark-white);">Mettings</a>
+                                            <a href=".\meeting.html" style="opacity: 1; background-color: var(--dark-white);">Meetings</a>
                                         </li>
                                         <li>
                                             <a href=".\Team.html">Teams</a>
