--- a/public/Team.html
+++ b/public/Team.html
@@ -35,7 +35,7 @@
                                             <a href=".\index.html">Calendar</a>
                                         </li>
                                         <li>
-                                            <a href=".\meeting.html">Mettings</a>
+                                            <a href=".\meeting.html">Meetings</a>
                                         </li>
                                         <li>
                                             <a href=".\Team.html" style="opacity: 1; background-color: var(--dark-white);">Teams</a>
