--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                         <a href=".\index.html" style="opacity: 1; background-color: var(--dark-white);">Calendar</a>
                       </li>
                       <li>
-                        <a href=".\meeting.html">Mettings</a>
+                        <a href=".\meeting.html">Meetings</a>
                       </li>
                       <li>
                         <a href=".\Team.html">Teams</a>
