--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                           </span></a
                         >
                       </li>
-                      <li id="log-state"><a href="#">Logout</a></li>
+                      <li id="log-state"><a href=".\login.html">Logout</a></li>
                     </ul>
                   </div>
                 </div>
